# mastodon_moyu

./: README.en.md  README.ja.md  README.md  package-lock.json  package.json  tsconfig.json
scripts/: generate_transparent_icon.swift  tui-state.mjs  tui.mjs
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/api/: index.ts  mastodon.ts  types.ts
src/components/: Settings.svelte  StatusBar.svelte  StatusItem.svelte  Timeline.svelte  TitleBar.svelte
src/routes/: +layout.ts  +page.svelte
src/stores/: i18n.ts  index.ts  persistence.ts  timeline.ts
src/styles/: global.css
