[package]
name = "touchfish_mastodon"
version = "0.1.2"
description = "A cyber desktop widget for ambient Mastodon reading"
authors = ["you"]
edition = "2021"

[lib]
name = "touchfish_mastodon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
